Quick fix for pointer cursor not showing when hovering over ListGroupItems. Set href to javascript:void(0).

--- a/app/styles/elements/_playlist.scss
+++ b/app/styles/elements/_playlist.scss
@@ -1,4 +1,4 @@
-.playlists { border-left: 1px solid #ccc; }
+.playlists-multiple { border-left: 1px solid #ccc; }
 
 .playlist-container {
 
